# StudySync

./: .gitignore  FEATURE_SUMMARY.md  README.md  package-lock.json  package.json  projectcontext.md
backend/: .env  .env.example  .gitignore  init_db.py  main.py  pyproject.toml  requirements.txt  test_neon.py
backend/myenv/: pyvenv.cfg
backend/myenv/Scripts/: activate  activate.bat
backend/src/: .env  app.py  dependencies.py  utils.py
backend/src/database/: README.md  create_db.py  database.py  models.py  schemas.py
backend/src/routes/: Dashboard.py  __init__.py  activity.py  audio_video_call.py  chatbot.py  communities.py  debug.py  documents.py  friends.py  groups.py  messages.py  notifications.py  notifications_ws.py  resources.py  streaks.py  study_sessions.py  test.py  users.py
backend/src/routes/project/: invitations.py  projects.py  tasks.py  team_members.py  time_logs.py
backend/src/schemas/: activity.py  audio_video_call.py  chatbot.py  communities.py  documents.py  friends.py  groups.py  messages.py  notifications.py  projects.py  resources.py  streaks.py  study_sessions.py  users.py
backend/src/services/: activity_service.py  chatbot_conversation_service.py  chatbot_service.py  community_service.py  document_service.py  friends_service.py  group_service.py  messages_service.py  notification_service.py  notification_ws_manager.py  resources.py  resources_service.py  somment_service.py  streak_service.py  study_session_service.py  upload_service.py  user_service.py
backend/src/services/project/: email_service.py  github_service.py  (+5 more)
(+105 files in other folders)
