[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "clerk-backend-api>=3.3.1",
    "cloudinary>=1.44.1",
    "email-validator>=2.3.0",
    "fastapi>=0.118.2",
    "groq>=1.0.0",
    "openai>=2.15.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
    "websocket>=0.2.1",
    "websockets>=16.0",
]
